Bug fix: "None" label option is invisible on Windows

--- a/wx-src/style/clippingLabelPicker.css
+++ b/wx-src/style/clippingLabelPicker.css
@@ -5,6 +5,7 @@
 
 #clipping-label-picker > option {
     background-color: white;
+    color: initial;
 }
 
 #clipping-label-picker > option[value="red"] {
